--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <i data-feather="play"></i>
             </div>
             <div id="song-duration"></div>
-            <audio id="audio" src="assets/audio/ST12RasaYangTertinggalOfficialLyricVideo (mp3cut.net).mp3" autoplay></audio>
+            <audio id="audio" src="assets/audio/ST12RasaYangTertinggalOfficialLyricVideo (mp3cut.net).mp3"></audio>
         </div>
     </div>
     <script src="script.js"></script>
